# SOPy

./: .gitmodules  README.md
sop1/: CMakeLists.txt
sop1/lab0/: CMakeLists.txt  Makefile  lab0  lab0.c
sop1/lab1/: lab1.c  utils.h
sop1/lab1 tut/: Lab 1..md
sop1/lab1 tut/cs/: Makefile  progrum.c  utils.h
sop1/lab1 tut/cs2/: jugoslawiec.c  utils.h
sop1/lab1 tut/example/: Makefile  lister.c  utils.h
sop1/lab1 tut/isi/: Makefile  libra.c  utils.h
sop1/lab1/dir1/: file1.txt  file2.txt
sop1/lab1/dir2/: file3.txt  file4.txt
sop1/lab1/dir2/dir3/: file5.txt  file6.txt
sop1/lab2/: lab2.c  utils.h
sop1/lab2 popr/: Makefile  lab2.c  lab2old.c
sop1/lab2 tut/cs/: Makefile  lab.c
sop1/lab2 tut/example/: Makefile  exmp.c  utils.h
sop1/lab2 tut/isi/: Makefile  prog.c  utils.h
sop1/lab2 tut/tut/: Makefile  prog13.c  prog14.c  prog15.c  prog16.c
sop1/lab3/: Makefile  lab3.c  utils.h
sop1/lab3 tut/cs/: Makefile  utils_3.1.h
sop1/lab3 tut/sopstarerpack/: Makefile  avatar.c  utils_3.2.h
sop1/lab3 tut/tut/: Makefile  prog17.c  prog18.c  prog19.c  sighand.c
sop1/lab4/: Makefile  lab4.c
sop1/lab4 tut/tut/: archunix5a.c
sop2/: CMakeLists.txt
sop2/lab1/: Makefile  lab1.c  utils.h
sop2/lab1 tut/example/: prog.c
sop2/lab1 tut/tut/: prog21_c.c  prog21a_s.c  prog21b_s.c  prog22.c
sop2/lab2/: Makefile  klient.c  kuchnia.c  utils.h
sop2/lab2 tut/isi/: client.c  server.c
sop2/lab2 tut/tut/: Makefile  mq_example.c
sop2/lab3/: client.c  server.c  utils.h
sop2/lab3 tut/: utils.h
sop2/lab3 tut/tut/: Makefile  prog23_local.c  prog23_tcp.c  prog23b_s.c
sop2/lab3 tut/tut2/: Makefile  prog24c.c  prog24s.c
sop2/lab4/: Makefile
